--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-430.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇯🇵 日本-306.3KB/s(Youtube:不良林), server: 194.156.231.251, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-178.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-179.5KB/s(Youtube:不良林), server: 5.183.176.80, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-345.4KB/s(Youtube:不良林), server: 194.156.231.251, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-408.5KB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-402.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-778.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-335.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-188.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1011.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 134.195.196.128, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-637.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇭🇰 香港-2.91MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-871.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-430.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-402.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-430.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-402.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-430.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-402.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-430.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-402.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-430.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-402.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-430.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-402.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-430.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-402.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
