--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-778.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-335.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-188.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1011.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 134.195.196.128, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-637.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇭🇰 香港-2.91MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇦 加拿大-871.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-740.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.69MB/s(Youtube:不良林), server: hk01.henet.cyou, port: 20000, type: vmess, uuid: ad0f1f7c-590c-4bb5-ae5b-e6ac8f170cf8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: hk01.henet.cyou}}
+  - {name: 🇨🇳 中国-886.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-860.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-804.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-738.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-717.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-886.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-738.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-886.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-738.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-886.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-738.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-886.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-738.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-886.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-738.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-886.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-738.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-778.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-188.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1011.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-637.9KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-740.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-886.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-738.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
